--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <doctype html>
 <html>
 <head>
-<title>Hello How are you?</title>
+<title>Github Learning</title>
 </head>
-<body>Hello</body>
+<body>
+  <p>Hello How are you?</p>
+</body>
 </html>
